--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -56,7 +56,7 @@
         <% end %>
         
         <% if @team.type_2  %>
-        <p>Trainees  – <%= display_trainees(@trainees.type_s) %>
+        <p>Trainees  – <%= display_trainees(@trainees.type_2) %>
         </p>
         <% end %>
 
