Display team message on index

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -23,6 +23,10 @@
               <div>Incident  –  <%= team.incident %></div>
             <% end %>
             
+            <div class="message">
+            </br>
+              <%= simple_format(team.message) %>
+            </div>
           </div>
         </div>
       </div>
