--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -21,7 +21,7 @@
         </p>
       <% end %>
     <div>
-      <div class="note">
+      <div class="message">
         <%= simple_format(@team.message) %>
       </div>
       </br>
