Add workphone to user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,7 +23,7 @@
 		  				<div class="tcard col-xs-12 col-sm-6">Location:  <span><%= user.city_state %></span></div>
 		  				<div class="tcard col-xs-12 col-sm-6">Email:  <span><%= user.email %></span></div>
 		  				<div class="tcard col-xs-12 col-sm-6">Cell Phone:  <span><%= number_to_phone(user.phone) %></span></div>
-		  				<div class="tcard col-xs-12 col-sm-6">Work Phone:  <span><%= number_to_phone(user.phone) %></span></div>
+		  				<div class="tcard col-xs-12 col-sm-6">Work Phone:  <span><%= number_to_phone(user.work_phone) %></span></div>
 		  				<div class="tcard col-xs-12">Summary:<span><%= simple_format(user.summary) %></span></div>
 		  				<div class="tcard col-xs-12 blurb-tags">Skills:
 								<ul class="skills-tags">
