--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 			<div><%= @user.host %></div>
 			<div><%= @user.email %></div>
 			<div><%= number_to_phone(@user.phone) %></div>
+      <div><%= number_to_phone(@user.work_phone) %></div>
 			<div><%= @user.city_state %></div>
       <br>
 			<div class="user-tags">
