--- a/app/views/devise/registrations/_custom_fields.html.erb
+++ b/app/views/devise/registrations/_custom_fields.html.erb
@@ -49,9 +49,15 @@
   <%= f.select :state, options_for_select(Collections::STATES, @user.state), {prompt: ""}, class: "form-control"  %>
 </div>
 <div class="form-group">
-  <%= f.label :phone %>
+  <%= f.label "Cell phone" %>
   <%= f.text_field :phone, class: "form-control" %>
 </div>
+
+<div class="form-group">
+  <%= f.label "Work phone" %>
+  <%= f.text_field :work_phone, class: "form-control" %>
+</div>
+
 <div class="form-group">
   <%= f.label :summary %>
   <%= f.text_area :summary, class: "form-control" %>
