--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -158,9 +158,23 @@
             <%= f.label :assistant %>
             <%= f.select :assistant, options_for_select(User.all.collect { | user | [user.full_name, user.id] }), {prompt: "CHOOSE ASSISTANT"}, { class: "form-control" } %>
           </div>
+          <%= f.label "Status Dates" %>
+          <div class="row">
+            
+            <div class="field col-xs-6">
+              <%= f.text_field :start_date, id: :roster_start_date, :data => {:provide => "datepicker"}, class: "form-control", placeholder: "START DATE" %>
+              <!-- <span class="input-group-addon">to</span> -->
+            </div>
+            <div class="field col-xs-6">
+              <%= f.text_field :end_date, id: :roster_end_date, :data => {:provide => "datepicker"}, class: "form-control", placeholder: "END DATE" %>
+              
+            </div>
+          </div>
 
           <%= f.hidden_field :team_id, value: @team.id %>
-          <div><%= f.submit "ADD", class: "btn btn-info btn-tiny sm-margin-top " %></div>
+          <div><%= f.submit "ADD", class: "btn btn-info btn-tiny sm-margin-top " %>  <%= link_to "CANCEL", 'javascript:;', id: 'cancel-new-roster', class: "cancel-form btn btn-light btn-tiny sm-margin-top " %>
+            
+          </div>
           
         <% end %>
       </div>
