--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
 			  	
 			  			<div class="col-xs-5 text-right">
 			  				<% if user.remote_only %><span class="remote-only">Remote Only  </span><% end %>  
-                <% if current_user == user  %>
+                <% if current_user == user || current_user.admin? %>
                   <%= best_in_place user, :status, :as => :select, :collection => 
                                 [[1,'Available'], [2,'On Assignment'], [3, 'Unavailable']] %>
                 <% else %>
